@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2011  Vasco Nunes, Piotr Ożarowski
 
 
+2012-01-10  Piotr Ożarowski
+	* Filmweb movie plugin updated (thanks to mariusz2806)
+
 2012-01-08  Piotr Ożarowski
 	* Telico import plugin added (thanks to Elan Ruusamäe)
 
